--- a/shell/shell.vcxproj
+++ b/shell/shell.vcxproj
@@ -151,7 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
+    <ClInclude Include="hashTable.hpp" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="shell.h" />
+    <ClInclude Include="shellSlot.h" />
+    <ClInclude Include="shellCommandArgs.h" />
+    <ClInclude Include="shellcommandtree.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -160,7 +166,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="shell.cpp" />
+    <ClCompile Include="shellSlot.cpp" />
+    <ClCompile Include="shellCommandArgs.cpp" />
+    <ClCompile Include="shellcommandtree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
